--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -1629,7 +1629,7 @@ msgstr "Persone"
 msgid "Values of the location filter"
 msgstr "Valori del filtro posizione"
 
-msgid "Choose the filter type for events (default is 'tags')"
+msgid "Choose the filter type for events (default is 'Tags')"
 msgstr ""
 "Scegliere il tipo di filtro per gli eventi (l'impostazione predefinita è "
 "'tag')"
