PAS: Fix translation.
TYPE: Bugfix

--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -396,7 +396,7 @@ msgid "normal"
 msgstr "normal"
 
 msgid "intercantonal"
-msgstr "interkantoninterkantoninterkalal"
+msgstr "interkantonal"
 
 msgid "Guest"
 msgstr "Gast"
