Event: Adds settings for general event files and shows files in sidebar of occurrences view
TYPE: Feature
LINK: ogc-1544

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2600,6 +2600,12 @@ msgstr "Als erstes Element des Inhalts"
 msgid "As a full width header"
 msgstr "Als ein Header-Bild mit voller Breite"
 
+msgid "Documents"
+msgstr "Dokumente"
+
+msgid "General event documents"
+msgstr "Allgemeine Veranstaltungsdokumente"
+
 msgid "Show file links in sidebar"
 msgstr "Dateilinks in der Seitenleiste anzeigen"
 
