--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2604,6 +2604,12 @@ msgstr "Come primo elemento del contenuto"
 msgid "As a full width header"
 msgstr "Come immagine di intestazione a tutta larghezza"
 
+msgid "Documents"
+msgstr "Documents"
+
+msgid "General event documents"
+msgstr "Documents généraux de l'événement"
+
 msgid "Show file links in sidebar"
 msgstr "Afficher les liens vers les fichiers dans la barre latérale"
 
