--- a/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/de_ch/LC_MESSAGES/onegov.form.po
@@ -176,6 +176,12 @@ msgstr ""
 "kostenpflichtiges Feld definiert ist."
 
 #, python-format
+msgid "The '{label}' group is empty and will not be visible. Either "
+"remove the empty group or add fields to it."
+msgstr "Die Gruppe '{label}' ist leer und wird nicht sichtbar sein. "
+"Entweder entfernen Sie die leere Gruppe oder fügen Felder hinzu."
+
+#, python-format
 msgid ""
 "Invalid field type for field '{label}'. For filters only 'select' or "
 "'multiple select' fields are allowed."
