--- a/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/fr_CH/LC_MESSAGES/onegov.form.po
@@ -175,6 +175,12 @@ msgstr ""
 "payant est défini."
 
 #, python-format
+msgid "The '{label}' group is empty and will not be visible. Either "
+"remove the empty group or add fields to it."
+msgstr "Le groupe '{label}' est vide et ne sera pas visible. Supprimez le "
+"groupe vide ou ajoutez des champs."
+
+#, python-format
 msgid ""
 "Invalid field type for field '{label}'. For filters only 'select' or "
 "'multiple select' fields are allowed."
