--- a/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
+++ b/src/onegov/form/locale/it_CH/LC_MESSAGES/onegov.form.po
@@ -173,6 +173,13 @@ msgstr ""
 "campo prezzo."
 
 #, python-format
+msgid "The '{label}' group is empty and will not be visible. Either "
+"remove the empty group or add fields to it."
+msgstr ""
+"Il gruppo '{label}' è vuoto e non sarà visibile. Rimuovere il gruppo vuoto "
+"o aggiungere campi."
+
+#, python-format
 msgid ""
 "Invalid field type for field '{label}'. For filters only 'select' or "
 "'multiple select' fields are allowed."
