--- a/src/onegov/user/locale/de_ch/LC_MESSAGES/onegov.user.po
+++ b/src/onegov/user/locale/de_ch/LC_MESSAGES/onegov.user.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2022-03-20 09:54+0100\n"
+"POT-Creation-Date: 2024-07-25 09:34+0200\n"
 "PO-Revision-Date: 2022-03-07 13:36+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -72,6 +72,17 @@ msgstr ""
 "Login fehlgeschlagen, da ihr Nutzer keine Gruppenzugehörigkeiten hat. "
 "Kontaktieren Sie ihren SAML2 System-Administrator"
 
+#, python-format
+msgid "${mtan} - mTAN for ${organisation}."
+msgstr "${mtan} - mTAN für ${organisation}."
+
+msgid ""
+"We sent an mTAN to the number linked with this account. Please enter it "
+"below."
+msgstr ""
+"Wir haben einen mTAN an die mit diesem Konto verknüpfte Nummer gesendet. "
+"Bitte geben Sie diesen unten ein."
+
 msgid "Name"
 msgstr "Name"
 
@@ -86,6 +97,12 @@ msgstr "YubiKey"
 
 msgid "Plug your YubiKey into a USB slot and press it."
 msgstr "YubiKey anschliessen und Knopf drücken."
+
+msgid "mTAN"
+msgstr "mTAN"
+
+msgid "Phone number"
+msgstr "Telefonnummer"
 
 msgid "The password must be at least eight characters long"
 msgstr "Das Passwort muss mindestens acht Zeichen lang sein"
