--- a/src/onegov/user/locale/fr_CH/LC_MESSAGES/onegov.user.po
+++ b/src/onegov/user/locale/fr_CH/LC_MESSAGES/onegov.user.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2022-03-20 09:54+0100\n"
+"POT-Creation-Date: 2024-07-25 09:34+0200\n"
 "PO-Revision-Date: 2022-03-07 13:38+0100\n"
 "Last-Translator: Marc Sommerhalder <info@seantis.ch>\n"
 "Language-Team: French\n"
@@ -35,11 +35,11 @@ msgstr "Échec de l'authentification"
 
 #, python-format
 msgid "User «${user}» is not authorized"
-msgstr "L'utilisateur « ${user} » n'est pas autorisé"
+msgstr "L'utilisateur «${user}» n'est pas autorisé"
 
 #, python-format
 msgid "Successfully logged in as «${user}»"
-msgstr "Connecté avec succès en tant que « ${user} »"
+msgstr "Connecté avec succès en tant que «${user}»"
 
 msgid "AzureAD"
 msgstr "AzureAD"
@@ -70,6 +70,15 @@ msgstr ""
 "Vous ne pouvez pas vous connecter car votre utilisateur n'a pas de groupes. "
 "Contactez votre administrateur système SAML2."
 
+#, python-format
+msgid "${mtan} - mTAN for ${organisation}."
+msgstr "${mtan} - mTAN pour ${organisation}."
+
+msgid ""
+"We sent an mTAN to the number linked with this account. Please enter it "
+"below."
+msgstr "Nous avons envoyé un mTAN au numéro lié à ce compte. Veuillez le saisir ci-dessous."
+
 msgid "Name"
 msgstr "Nom"
 
@@ -84,6 +93,12 @@ msgstr "YubiKey"
 
 msgid "Plug your YubiKey into a USB slot and press it."
 msgstr "Branchez votre YubiKey sur un port USB et appuyez dessus."
+
+msgid "mTAN"
+msgstr "mTAN"
+
+msgid "Phone number"
+msgstr "Numéro de téléphone"
 
 msgid "The password must be at least eight characters long"
 msgstr "Le mot de passe doit comporter au minimum 8 caractères"
