--- a/src/onegov/user/locale/it_CH/LC_MESSAGES/onegov.user.po
+++ b/src/onegov/user/locale/it_CH/LC_MESSAGES/onegov.user.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2022-03-20 09:54+0100\n"
+"POT-Creation-Date: 2024-07-25 09:34+0200\n"
 "PO-Revision-Date: 2022-03-07 13:38+0100\n"
 "Last-Translator: Marc Sommerhalder <info@seantis.ch>\n"
 "Language-Team: Italian\n"
@@ -70,6 +70,15 @@ msgstr ""
 "Non è possibile effettuare il login perché l'utente non ha gruppi. Contatta "
 "il tuo amministratore di sistema SAML2."
 
+#, python-format
+msgid "${mtan} - mTAN for ${organisation}."
+msgstr "${mtan} - mTAN per ${organisation}."
+
+msgid ""
+"We sent an mTAN to the number linked with this account. Please enter it "
+"below."
+msgstr "Abbiamo inviato un mTAN al numero collegato a questo conto. La preghiamo di inserirlo qui sotto."
+
 msgid "Name"
 msgstr "Nome"
 
@@ -84,6 +93,12 @@ msgstr "YubiKey"
 
 msgid "Plug your YubiKey into a USB slot and press it."
 msgstr "Collegare il dispositivo YubiKey a una porta USB e premerlo."
+
+msgid "mTAN"
+msgstr "mTAN"
+
+msgid "Phone number"
+msgstr "Numero di telefono"
 
 msgid "The password must be at least eight characters long"
 msgstr "La password deve contenere almeno 8 caratteri"
