--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-07-25 09:57+0200\n"
+"POT-Creation-Date: 2024-07-25 16:25+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -4526,6 +4526,9 @@ msgstr "Keine Verknüpfungen gefunden."
 msgid "Select an item to view it"
 msgstr "Wählen Sie einen Eintrag aus um diesen anzuzeigen"
 
+msgid "mTAN"
+msgstr "mTAN"
+
 msgid "Identicon"
 msgstr "Identicon"
 
@@ -4769,6 +4772,16 @@ msgstr "mTAN eingeben"
 
 msgid "Setup mTAN"
 msgstr "mTAN aktivieren"
+
+msgid "Invalid or expired TOTP provided."
+msgstr "Ungültige oder abgelaufenes TOTP eingegeben."
+
+msgid "Please enter the six digit code from your authenticator app"
+msgstr ""
+"Bitte geben Sie den sechsstelligen Code aus ihrer Authenticator App ein"
+
+msgid "Enter TOTP"
+msgstr "TOTP eingeben"
 
 msgid ""
 "The requested resource is protected. To obtain time-limited access, please "
@@ -5936,9 +5949,6 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
-
-#~ msgid "mTAN"
-#~ msgstr "mTAN"
 
 #~ msgid "Phone number"
 #~ msgstr "Telefonnummer"
