Make nationality a multi select field

--- a/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
+++ b/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
@@ -155,8 +155,8 @@ msgstr "Geburtsdatum"
 msgid "Hometown"
 msgstr "Heimatort"
 
-msgid "Nationality"
-msgstr "Nationalität"
+msgid "Nationality(ies)"
+msgstr "Nationalität(en)"
 
 msgid "Marital status"
 msgstr "Zivilstand"
