--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1823,8 +1823,8 @@ msgstr "Email-Benachrichtigungen für alle Tickets deaktivieren"
 msgid "Always send email notification if a new ticket message is sent"
 msgstr "Email-Benachrichtigung immer senden bei neuen Ticket-Nachrichten"
 
-msgid "Categories restriced by user group settings"
-msgstr "Durch Benutzergruppeneinstellungen eingeschränkt Kategorien"
+msgid "Categories restricted by user group settings"
+msgstr "Durch Benutzergruppeneinstellungen eingeschränkte Kategorien"
 
 msgid "Mute tickets individually if the auto-accept feature is enabled."
 msgstr ""
