--- a/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
+++ b/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
@@ -599,7 +599,7 @@ msgstr "Briefvorlagen"
 msgid "Report change"
 msgstr "Mutation melden"
 
-msgid "Confirm currnet data"
+msgid "Confirm current data"
 msgstr "Aktuelle Daten bestätigen"   
 
 msgid "Edit translator"
