--- a/src/onegov/fsi/locale/de_CH/LC_MESSAGES/onegov.fsi.po
+++ b/src/onegov/fsi/locale/de_CH/LC_MESSAGES/onegov.fsi.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-05-23 09:47+0200\n"
+"POT-Creation-Date: 2024-08-12 11:51+0200\n"
 "PO-Revision-Date: 2020-03-05 14:36+0100\n"
 "Last-Translator: Denis Krienbühl <denis.krienbuehl@seantis.ch>\n"
 "Language-Team: German\n"
@@ -31,6 +31,9 @@ msgstr "Teilnehmer"
 
 msgid "Event Subscriptions"
 msgstr "Kursanmeldungen"
+
+msgid "Surveys"
+msgstr "Umfragen"
 
 msgid "Files"
 msgstr "Dateien"
@@ -96,6 +99,12 @@ msgstr "Anzahl Jahre"
 
 msgid "Hidden"
 msgstr "Versteckt"
+
+msgid "Evaluation URL"
+msgstr "Link zur Umfrage"
+
+msgid "URL to the evaluation form"
+msgstr "URL zur Kursumfrage"
 
 msgid "Not a valid integer value"
 msgstr "Keine gültige Ganzzahl"
@@ -557,6 +566,9 @@ msgstr "Datum"
 
 msgid "Remaining seats"
 msgstr "Verbleibende Plätze"
+
+msgid "Course Evaluation"
+msgstr "Kursevaluation"
 
 msgid "Description:"
 msgstr "Beschreibung:"
