Translator Directory: Make nationality a multi select field with a complete list of countries
TYPE: Feature
LINK: ogc-1755

onegov-translator --select /translator_directory/* migrate-nationalities --dry-run

--- a/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
+++ b/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
@@ -155,8 +155,8 @@ msgstr "Geburtsdatum"
 msgid "Hometown"
 msgstr "Heimatort"
 
-msgid "Nationality"
-msgstr "Nationalität"
+msgid "Nationality(ies)"
+msgstr "Nationalität(en)"
 
 msgid "Marital status"
 msgstr "Zivilstand"
@@ -600,7 +600,7 @@ msgid "Report change"
 msgstr "Mutation melden"
 
 msgid "Confirm current data"
-msgstr "Aktuelle Daten bestätigen"   
+msgstr "Aktuelle Daten bestätigen"
 
 msgid "Edit translator"
 msgstr "Übersetzer/in bearbeiten"
