Add translations to org and town6

--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -4092,11 +4092,42 @@ msgstr ""
 "Abonnez-vous à notre lettre d'informations pour rester au courant en "
 "permanence :"
 
-msgid "Signup"
-msgstr "S'abonner"
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Sélectionnez les catégories de lettres d'information qui vous "
+"intéressent. Vous recevrez la newsletter si elle traite d'au moins une des "
+"catégories souscrites."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. "
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thème 1:\n"
+"  - Sous-thème 1.1\n"
+"  - Sous-thème 1.2\n"
+"  - Thème 2\n"
+"  - Thème 3:\n"
+"  - Sous-thème 3.1"
+"```"
 
 msgid "There are currently ${count} recipients registered."
 msgstr "Il y a actuellement ${count} destinataires enregistrés."
+
+msgid "Signup"
+msgstr "S'abonner"
 
 msgid "Archive"
 msgstr "Archiver"
