--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -1493,6 +1493,40 @@ msgstr "RSS Feed mit Ihrer aktuellen Auswahl an Hashtags"
 msgid "Subscribe to newsletter"
 msgstr "Newsletter abonnieren"
 
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Wählen Sie die Newsletter-Kategorien aus, an denen Sie interessiert "
+"sind. Sie werden den Newsletter erhalten, wenn er über mindestens eine der "
+"abonnierten Kategorien berichtet."
+
+msgid "Newsletter categories"
+msgstr "Newsletter-Kategorien"
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Beispiel für Newsletter-Themen mit Unterthemen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thema 1:\n"
+"    - Unterthema 1.1\n"
+"    - Unterthema 1.2\n"
+"  - Thema 2\n"
+"  - Thema 3:\n"
+"    - Unterthema 3.1\n"
+"```"
+
 msgid "Receive the newsletter by email"
 msgstr "Newsletter per E-Mail erhalten"
 
