--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -4082,11 +4082,42 @@ msgid "Sign up to our newsletter to always stay up to date:"
 msgstr ""
 "Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu bleiben:"
 
-msgid "Signup"
-msgstr "Abonnieren"
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Wählen Sie die Newsletter-Kategorien aus, an denen Sie interessiert "
+"sind. Sie werden den Newsletter erhalten, wenn er über mindestens eine der "
+"abonnierten Kategorien berichtet."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Beispiel für Newsletter-Themen mit Unterthemen im yaml-Format. "
+"Hinweis: Tiefere Strukturen werden nicht unterstützt."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thema 1:\n"
+"    - Unterthema 1.1\n"
+"    - Unterthema 1.2\n"
+"  - Thema 2\n"
+"  - Thema 3:\n"
+"    - Unterthema 3.1\n"
+"```"
 
 msgid "There are currently ${count} recipients registered."
 msgstr "Zur Zeit sind ${count} Abonnenten registriert."
+
+msgid "Signup"
+msgstr "Abonnieren"
 
 msgid "Archive"
 msgstr "Archiv"
