--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1492,6 +1492,38 @@ msgstr "Flux RSS avec votre sélection actuelle d'étiquettes"
 msgid "Subscribe to newsletter"
 msgstr "Souscrire à la lettre d'informations"
 
+msgid "Select newsletter categories your are interested in. You will receive "
+"the newsletter if it reports on at least one of the subscribed categories."
+msgstr "Sélectionnez les catégories de lettres d'information qui vous "
+"intéressent. Vous recevrez la newsletter si elle traite d'au moins une des "
+"catégories souscrites."
+
+msgid "Example for newsletter topics with subtopics in yaml format. "
+"Note: Deeper structures are not supported."
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Topic 1:\n"
+"    - Subtopic 1.1\n"
+"    - Subtopic 1.2\n"
+"  - Topic 2\n"
+"  - Topic 3:\n"
+"    - Subtopic 3.1\n"
+"```"
+msgstr "Exemple de sujets de newsletter avec des sous-sujets au format yaml. "
+"Note : Les structures plus profondes ne sont pas prises en charge. "
+"\n"
+"```\n"
+"Organisation:\n"
+"  - Thème 1:\n"
+"  - Sous-thème 1.1\n"
+"  - Sous-thème 1.2\n"
+"  - Thème 2\n"
+"  - Thème 3:\n"
+"  - Sous-thème 3.1"
+"```"
+
+
 msgid "Receive the newsletter by email"
 msgstr "Recevoir la lettre d'informations par e-mail"
 
