--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -4079,8 +4079,13 @@ msgstr ""
 "eingeloggt sind."
 
 msgid "Sign up to our newsletter to always stay up to date:"
-msgstr ""
-"Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu bleiben:"
+msgstr "Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu "
+"bleiben:"
+
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Erfolg! Wir haben Ihre abonnierten Kategorien aktualisiert auf "
+"${subscribed}."
 
 msgid "Select newsletter categories your are interested in. You will receive "
 "the newsletter if it reports on at least one of the subscribed categories."
