--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -4092,6 +4092,10 @@ msgstr ""
 "Abonnez-vous à notre lettre d'informations pour rester au courant en "
 "permanence :"
 
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Succès! Nous avons mis à jour vos catégories abonnées à ${subscribed}."
+
 msgid "Select newsletter categories your are interested in. You will receive "
 "the newsletter if it reports on at least one of the subscribed categories."
 msgstr "Sélectionnez les catégories de lettres d'information qui vous "
