--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -4081,6 +4081,10 @@ msgstr ""
 msgid "Sign up to our newsletter to always stay up to date:"
 msgstr "Iscriviti alla nostra newsletter per rimanere sempre aggiornato:"
 
+# python-format
+msgid "Success! We have updated your subscribed categories to ${subscribed}."
+msgstr "Successo! Abbiamo aggiornato le categorie sottoscritte a ${subscribed}."
+
 msgid "Select newsletter categories your are interested in. You will receive "
 "the newsletter if it reports on at least one of the subscribed categories."
 msgstr "Selezionate le categorie di newsletter a cui siete interessati. "
