--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-07-25 16:25+0200\n"
+"POT-Creation-Date: 2024-08-19 12:31+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1898,6 +1898,9 @@ msgstr "Indirizzo del sito web incluso https://"
 msgid "API Key"
 msgstr "Chiave API"
 
+msgid "Read only"
+msgstr "Sola lettura"
+
 msgid "Submit your event"
 msgstr "Invia il tuo evento"
 
@@ -1947,11 +1950,18 @@ msgstr "Indirizzo e-mail"
 msgid "Submission Window"
 msgstr "Finestra di presentazione"
 
+msgid "A submission window with this title already exists."
+msgstr "Esiste già una finestra di presentazione con questo titolo."
+
 #, python-format
-msgid "The date range overlaps with an existing submission window (${range})."
+msgid ""
+"The date range overlaps with an existing submission window (${range}). "
+"Either choose a different date range or give this window a title to "
+"differenciate it from other windows."
 msgstr ""
 "L'intervallo di date si sovrappone a una finestra di presentazione esistente "
-"(${range})."
+"(${range}). Scegliere un intervallo di date diverso o dare a questa finestra "
+"un titolo per differenziarla dalle altre finestre."
 
 msgid "Short name to identify the text module"
 msgstr "Nome breve per identificare il modulo di testo"
@@ -2816,8 +2826,8 @@ msgstr "Il rifiuto di ${title} non può essere annullato."
 msgid "Reject reservation"
 msgstr "Rifiuta prenotazione"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Evento"
 
@@ -3020,9 +3030,6 @@ msgstr "Chiavi dell'applicazione"
 
 msgid "Key"
 msgstr "Chiave"
-
-msgid "Read only"
-msgstr "Sola lettura"
 
 msgid "Last used"
 msgstr "Ultimo utilizzo"
@@ -5957,6 +5964,13 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#, python-format
+#~ msgid ""
+#~ "The date range overlaps with an existing submission window (${range})."
+#~ msgstr ""
+#~ "L'intervallo di date si sovrappone a una finestra di presentazione "
+#~ "esistente (${range})."
 
 #~ msgid "Phone number"
 #~ msgstr "Numero di telefono"
